flexmeasures/ui/static/css/flexmeasures.css
/* ... */
.container__predefined-ranges button {
    color: var(--primary-border-color);
    font-weight: 500;
    cursor: pointer !important;
    border-right: 1px solid var(--primary-border-color) !important;
    flex: 1 1 auto;
}
.container__predefined-ranges > button:last-child {
    border-right: none !important;
}

.container__months {
    box-shadow: 0 0 10px rgba(0,0,0,.1) !important;
    border-radius: 6px !important;
    -webkit-border-radius: 6px !important;
    -moz-border-radius: 6px !important;
    -ms-border-radius: 6px !important;
    -o-border-radius: 6px !important;
    justify-content: center;
}

.litepicker .container__days .day-item.is-today {
    color: var(--nav-current-color);
    background: var(--secondary-transparent);
}

.litepicker .container__days .day-item {
    color: var(--litepicker-day-color);
    cursor: pointer;
    width: 38px;
    height: 38px;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: none !important;
    border-radius: 50%;
    transition: .4s;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    -webkit-transition: .4s;
    -moz-transition: .4s;
    -ms-transition: .4s;
    -o-transition: .4s;
}

.litepicker .container__days .day-item:hover {
    border: none;
    color: var(--primary-color);
    background: var(--primary-transparent);
}

.litepicker .container__days .day-item.is-in-range {
    color: var(--nav-current-color);
    background-color: var(--secondary-transparent);
    border-radius: 0;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    -ms-border-radius: 0;
    -o-border-radius: 0;
}

.litepicker .container__days .day-item.is-start-date.is-end-date {
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}

.litepicker .container__days .day-item.is-end-date {
    color: var(--nav-current-color);
    background-color: var(--nav-current-background-color);
    border-radius: 0 50% 50% 0;
    -webkit-border-radius: 0 50% 50% 0;
    -moz-border-radius: 0 50% 50% 0;
    -ms-border-radius: 0 50% 50% 0;
    -o-border-radius: 0 50% 50% 0;
}

.litepicker .container__days .day-item.is-start-date {
    color: var(--nav-current-color);
    background-color: var(--nav-current-background-color);
    border-radius: 50% 0 0 50%;
    -webkit-border-radius: 50% 0 0 50%;
    -moz-border-radius: 50% 0 0 50%;
    -ms-border-radius: 50% 0 0 50%;
    -o-border-radius: 50% 0 0 50%;
}

.litepicker .container__days .day-item.is-end-date.is-flipped {
    border-radius: 50% 0 0 50%;
    -webkit-border-radius: 50% 0 0 50%;
    -moz-border-radius: 50% 0 0 50%;
    -ms-border-radius: 50% 0 0 50%;
    -o-border-radius: 50% 0 0 50%;
}

.litepicker .container__days .day-item.is-start-date.is-flipped {
    border-radius: 0 50% 50% 0;
    -webkit-border-radius: 0 50% 50% 0;
    -moz-border-radius: 0 50% 50% 0;
    -ms-border-radius: 0 50% 50% 0;
    -o-border-radius: 0 50% 50% 0;
}

.month-item {
    padding: 15px !important;
}

.litepicker .container__months.columns-2 {
    width: auto;
}

.litepicker[data-plugins*="ranges"] > .container__main > .container__predefined-ranges button {
    transition: .3s;
    -webkit-transition: .3s;
    -moz-transition: .3s;
    -ms-transition: .3s;
    -o-transition: .3s;
}

.litepicker[data-plugins*="ranges"] > .container__main > .container__predefined-ranges button:hover {
    cursor: pointer;
    opacity: 1;
    color: var(--nav-hover-color);
}

.litepicker .container__months .month-item-header .button-next-month:hover>svg {
    fill: var(--secondary-color) !important;
}

.litepicker .container__months .month-item-header .button-previous-month:hover>svg {
    fill: var(--secondary-color) !important;
}

@media (max-width: 525px) {
    #datepicker .container__main {
        flex-wrap: wrap;
    }

    #datepicker .container__predefined-ranges {
        width: 100%;
        margin-right: 0;
        margin-bottom: 15px;
    }
}

/* ---- End Date picker ---- */


/* --- Sensor Data --- */

.card {
    background: var(--white);
    margin: 15px;
    padding: 20px 15px;
    box-shadow: 0 0 10px rgba(0,0,0,.1);
    border-radius: 6px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    -ms-border-radius: 6px;
    -o-border-radius: 6px;
}
.card.vega-embed summary {
    transform: translate(-15px, 15px);
}

.role-title-text text {
    font-size: 20px;
    fill: var(--primary-color);
}

.sensor-data .row {
    margin: 0 !important;
}

#vg-tooltip-element {
    font-size: 16px;
}
#vg-tooltip-element table tr td.value {
    max-height: inherit !important;
}

/* --- End Sensor Data --- */


/* ---- Header action button ---- */

.header-action-button {
    padding-top: 5px;
    display: flex;
    justify-content: space-around;

    width: 100% !important;
}

.header-action-button>div {
    flex: 1 1 auto;
    width: auto !important;
    padding: 0;
}

.header-action-button>div * {
    float: none !important;
}

.header-action-button>div button {
    font-size: 15px;
    padding: 15px 30px;
    border: none;
    line-height: 16px;
    outline: none !important;
    box-shadow: none;
    border-radius: 0px;
    text-align: center;
    background: var(--primary-color);
    border-right: 1px solid var(--primary-border-color) !important;
    transition: .4s;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    -ms-border-radius: 0px;
    -o-border-radius: 0px;
    -webkit-transition: .4s;
    -moz-transition: .4s;
    -ms-transition: .4s;
    -o-transition: .4s;
}

.header-action-button>div button:hover, .header-action-button>div button:focus {
    background: var(--primary-hover-color) !important;
}

.header-action-button>div button {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}
/* ... */

